--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -5292,7 +5292,7 @@
 "~^/TODO$" "/static/404";
 "~^/404\.html$" "/static/404";
 "~^/docs/economics/1973-ellman-planningproblemsintheussr\.pdf$" "http://libgen.rs/book/index.php?md5=AABE7A78831905853582296D8903EEFB";  # DMCA
-"~^/docs/genetics/heritable/2006-kendler\.pdf$" "https://sci-hub.se/10.1017/s0033291706009524";  # DMCA
+"~^/docs/genetics/heritable/2006-kendler\.pdf$" "https://sci-hub.ru/10.1017/s0033291706009524";  # DMCA
 "~^/docs/iq/2019-tenijenhuis\.pdf$" "/static/404";  # DMCA
 "~^/docs/rotten.com/library/fuckofthemonth/index\.html$" "/static/404";
 "~^/plan\?revision\=20121127035526-f7719-999ce1acdfb62b5c9d7fd096fd1b2d8f7b3df35f$" "/static/404";
@@ -24027,8 +24027,44 @@
 "~^/docs/statistics/causality/2015-1$" "/docs/statistics/causality/index";
 "~^/docs/traffic/2010-%C3.*$" "/docs/traffic/2010-gwernnet-nfsncosts.maff";
 "~^/docs/heritability$" "/docs/genetics/heritable/index";
+"~^/GPT-3-Sandbox.*$" "https://beta.openai.com/playground";
+"~^/GPT-Neo.*$" "https://blog.eleuther.ai/announcing-20b/";
+"~^/dnmarchives/grams.tar.xz.*$" "/DNM-archives#grams";
+"~^/docs/ai/1966-ivakhnenko.pdfComputer.*$" "/docs/ai/1966-ivakhnenko.pdf";
+"~^/docs/genetgoogics/selection/1930-fisher-thegeneticaltheoryofnaturalselection.pdf.*$" "/docs/genetics/selection/1930-fisher-thegeneticaltheoryofnaturalselection.pdf";
+"~^/docs/rl/2019‐stanley.pdf.*$" "/docs/reinforcement-learning/model-free/2019-stanley.pdf";
+"~^/docs/statistics/bayes/1992-jaynes-maximumentropyandbayesianmethods.pdf.*$" "/docs/statistics/bayes/1988-jaynes-maximumentropyandbayesianmethods.pdf";
+"~^/images/spaced-repetition-forgetting-curve-wired-wozniak.jpg.*$" "/images/spaced-repetition/forgetting-curve-wired-wozniak.jpg";
+"~^/static/linkauto.hs.*$" "/static/build/LinkAuto.hs";
+"~^/static/img/japanesecrest-tsukinihoshi-dottedmoon.svg.*$" "/static/img/icons/japanesecrest-tsukinihoshi-dottedmoon.svg";
+"~^/static/build/guessTag$" "/static/build/guessTag.hs";
+"~^/images/heritable$" "/images/genetics/heritable/index";
+"~^/docs/statistics/desicion$" "/docs/statistics/decision/index";
+"~^/docs/statistics/desicion/1994-benter.pdf.*$" "/docs/statistics/decision/1994-benter.pdf";
+"~^/GPT-3Op.*$" "/GPT-3";
+"~^/static/sidenotes.js.*$" "/static/js/sidenotes.js";
+"~^/static/link-suggester.hs.*$" "/static/build/link-suggester.hs";
+"~^/static/Interwiki.hs.*$" "/static/build/Interwiki.hs";
+"~^/static/img/logo-laughingman.svg.*$" "/static/img/logo/logo-laughingman.svg";
+"~^/static/img/facebook.svg.*$" "/static/img/icons/facebook.svg";
+"~^/static/img/arrow-right-thick.svg.*$" "/static/img/icons/arrow-right.svg";
+"~^/static/generateSimilar.hs.*$" "/static/build/GenerateSimilar.hs";
+"~^/static/font/drop-cap/GoudyInitialen-Z.ttf.*$" "/static/font/drop-cap/goudy/GoudyInitialen-Z.ttf";
+"~^/static/font/drop-cap/GoudyInitialen-E.ttf.*$" "/static/font/drop-cap/goudy/GoudyInitialen-E.ttf";
+"~^/static/font/drop-cap/Cheshire-Initials-Z.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-Z.ttf";
+"~^/static/font/drop-cap/Cheshire-Initials-Y.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-Y.ttf";
+"~^/static/build/Query.o.*$" "/static/build/Query.hs";
+"~^/nootropics/docs/eva/2011-house.*$" "/docs/eva/2011-house";
+"~^/nootropics/Conscientiousness-and-online-education.*$" "/Conscientiousness-and-online-education";
+"~^/music/$" "/docs/music/index";
+"~^/modus-and.*$" "/Modus";
+"~^/modafinil/$" "/docs/modafinil/index";
+"~^/images/alerts/$" "/images/google/alerts/";
+"~^/image/$" "/images/";
+"~^/docs/https/www.edge.org/conversation/mc2011-history-violence-pinker.*$" "https://www.edge.org/conversation/mc2011-history-violence-pinker";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~^/.*/\.git/.*$" "/static/404";
 "~^.*/GET$" "/static/404";
 "~^.*/POST$" "/static/404";
 "~^.*/PUT$" "/static/404";
