--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -755,6 +755,8 @@ server {
         rewrite ^/(?<old>.*)\.page/index\.html$ /$old.page permanent;
         rewrite ^/(?<old>.*)\.page/$ /$old.page permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
+        rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
+
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
         rewrite ^/images/(?<old>.*)-530px.jpg-530px.jpg$ /images/$old-530px.jpg permanent;
