+; rewrite all '<br>' uses to be consistently '<br />' (tired of inconsistency and automated tooling disagreeing)

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -3658,7 +3658,7 @@
 "~^/docs/dnb/2002-sandercock\.pdf$" "/docs/statistics/meta-analysis/2002-sandercock.pdf";
 "~^/docs/dnb/2003-lee\.pdf$" "/docs/statistics/meta-analysis/2003-lee.pdf";
 "~^/docs/dnb/2004-greaves\.pdf$" "/docs/statistics/meta-analysis/2004-greaves.pdf";
-"~^/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis\.pdf<br><br><br>Much$" "/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
+"~^/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis\.pdf<br.*$" "/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
 "~^/docs/statistics/meta-analysis/2014-hunterschmidt-methodsofmetaanalysis\.pdf$" "/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
 "~^/docs/statistics/2004-hunterschmidt-methodsofmetaanalysis\.pdf$" "/docs/statistics/meta-analysis/2004-hunterschmidt-methodsofmetaanalysis.pdf";
 "~^/docs/statistics/2004-shapiro\.pdf$" "/docs/statistics/meta-analysis/2004-shapiro.pdf";
