--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4671,3 +4671,4 @@ default "";
 "~^/docs/economics/2019-ager.pdf.*$" "/docs/economics/2021-ager.pdf";
 "~^/docs/sociology/2013-bleakley-1.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5436311/";
 "~^/docs/psychology/vision/1996-qunn.pdf.*$" "/docs/psychology/vision/1996-quinn.pdf";
+"~^/docs/design/typography/2018-johnson.pdf.*$" "/docs/design/typography/sentence-spacing/2018-johnson.pdf";
