begin lowercasing gwern.net

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -178,7 +178,6 @@
 "~^/danbooru2020/filelist.txt.*$" "/Danbooru2021#rsync";
 "~^/Dath_note_anonymity.*$" "/Death-Note-Anonymity";
 "~^/Death-Note-Anonymitny$" "Death-Note-Anonymity";
-"~^/death-note-ending$" "/Death-Note-ending";
 "~^/Death%20Note%20ending$" "/Death-Note-Ending";
 "~^/Death-Note-Ending/$" "Death-Note-Ending";
 "~^/Death%20Note%20script$" "/Death-Note-script";
@@ -202,7 +201,6 @@
 "~^/the-hub$" "/DNM-archives#overall-coverage";
 "~^/%20Black-market%20arrests$" "/DNM-arrests";
 "~^/DNM-arrests%23fnref21$" "/DNM-arrests#fnref21";
-"~^/dnb-meta-analysis$" "/DNM-meta-analysis";
 "~^/black-market%20survival$" "/DNM-survival";
 "~^/DNM-survival.page/index.html.*$" "/DNM-survival.page";
 "~^/doc\/$" "/docs/";
@@ -317,6 +315,7 @@
 "~^/docs/ai/1962-chow.pdf.*$" "/docs/ai/highleyman/1962-chow.pdf";
 "~^/%20AI%20risk$" "/docs/ai/index";
 "~^/docs/ai/2019-10-21-gwern-gpt2-folkrnn-samples$" "/docs/ai/music/2019-10-21-gwern-gpt2-folkrnn-samples.mp3";
+"~^/docs/ai/2019-10-21-gwern-gpt2-folkrnn-samples.ogg.*$" "/docs/ai/music/2019-10-21-gwern-gpt2-folkrnn-samples.mp3";
 "~^/docs/ai/2019-10-22-gwern-gpt2-irish-paddywhack\.ogg$" "/docs/ai/music/2019-10-22-gwern-gpt2-irish-paddywhack.mp3";
 "~^/docs/ai/2019-10-22-gwern-gpt2-irish-thebankofturf\.ogg$" "/docs/ai/music/2019-10-22-gwern-gpt2-irish-thebankofturf.mp3";
 "~^/docs/ai/2019-10-23-gwern-gpt2-folkrnn-irishmusic-samples\.txt$" "/docs/ai/music/2019-10-23-gwern-gpt2-folkrnn-irishmusic-samples.txt";
@@ -978,6 +977,7 @@
 "~^/docs/cs/2021-ranganathan.pdfA.*$" "/docs/cs/2021-ranganathan.pdf";
 "~^/docs/cs/computa$" "/docs/cs/computable/index";
 "~^/docs/1955-nash.*$" "/docs/cs/cryptography/1955-nash";
+"~^/docs/cs/1955-nash.*$" "/docs/cs/cryptography/1955-nash";
 "~^/docs/statistics/cs/1955-nash.*$" "/docs/cs/cryptography/1955-nash.page";
 "~^/docs/cs/end$" "/docs/cs/end-to-end-principle/index";
 "~^/docs/cs/hardware/2021-rangan$" "/docs/cs/hardware/2021-ranganathan.pdf";
@@ -4126,7 +4126,8 @@
 "~^/1973-fogelson.pdf$" "/docs/music/music-distraction/1973-fogelson.pdf";
 "~^/1973-mowsesian.pdf$" "/docs/music/music-distraction/1973-mowsesian.pdf";
 "~^/1976-parente.pdf$" "/docs/music/music-distraction/1976-parente.pdf";
-"~^/1978-zimmer.pdf$" "/docs/music/music-distraction/1978-zimmer.pdf";
+"~^/1978-zimmer.pdf.*$" "/docs/music/music-distraction/1978-zimmer.pdf";
+"~^/docs/dnb/1978-zimmer.pdf.*$" "/docs/music/music-distraction/1978-zimmer.pdf";
 "~^/1988-martin.pdf$" "/docs/music/music-distraction/1988-martin.pdf";
 "~^/docs/music-distraction/1988-salome\.ptf$" "/docs/music/music-distraction/1988-salome.pdf";
 "~^/docs/music-distraction/\+1989-mayfield\.pdf$" "/docs/music/music-distraction/-1989-mayfield.pdf";
@@ -6922,7 +6923,6 @@
 "~^/fiction/Insert%20or%20Abort$" "/fiction/Insert-or-Abort";
 "~^/docs/fiction/Menard$" "/fiction/Menard";
 "~^/docs/fiction/Men-of-Iron$" "/fiction/Men-of-Iron";
-"~^/fiction/men-of-iron$" "/fiction/Men-Of-Iron";
 "~^/docs/[a-km-z].*/Missing-Cities.*$" "/fiction/Missing-Cities";
 "~^/docs/fiction/Poems$" "/fiction/Poems";
 "~^/docs/fiction/Safecracker$" "/fiction/Safecracker";
@@ -6934,7 +6934,6 @@
 "~^/docs/fiction/The-Ones-Who-Walk-Towards-Acre$" "/fiction/The-Ones-Who-Walk-Towards-Acre";
 "~^/docs/[a-km-z].*/The-Ones-Who-Walk-Towards-Acre.*$" "fiction/The-Ones-Who-Walk-Towards-Acre";
 "~^/docs/[a-km-z].*/The-Palace-of-Wonders.*$" "/fiction/The-Palace-of-Wonders";
-"~^/fiction/the-palace-of-wonders$" "/fiction/The-Palace-Of-Wonders";
 "~^/docs/fiction/The-Snowbanks-of-Time$" "/fiction/The-Snowbanks-of-Time";
 "~^/docs/[a-km-z].*/FMP-parody.*$" "/FMP-parody";
 "~^/fo\?fbclid.*$" "/fog-gun";
@@ -6990,7 +6989,6 @@
 "~^/docs/[a-km-z].*/Run-Length-Encoding.*$" "/haskell/Run-Length-Encoding";
 "~^/haskell/Sum-mers-of-Code,-2006-2013$"  "/haskell/Summer-of-Code";
 "~^/docs/[a-km-z].*/Summer-of-Code.*$" "/haskell/Summer-of-Code";
-"~^/haskell/wikipedia-archive-bot$" "/haskell/Wikipedia-archive-bot";
 "~^/docs/genetics/selection/www.mountimprobable.com/haskell/Wikipedia-Archive-Bot$" "/haskell/Wikipedia-Archive-Bot";
 "~^/docs/genetics/selection/www.mountimprobable.com/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/haskell/Wikipedia\+RSS\+Archive\+Bot3$" "/haskell/Wikipedia-RSS-Archive-Bot3";
