--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4672,3 +4672,287 @@ default "";
 "~^/docs/sociology/2013-bleakley-1.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5436311/";
 "~^/docs/psychology/vision/1996-qunn.pdf.*$" "/docs/psychology/vision/1996-quinn.pdf";
 "~^/docs/design/typography/2018-johnson.pdf.*$" "/docs/design/typography/sentence-spacing/2018-johnson.pdf";
+"~^/The-Existential-Risk-of-Mathematical-Error$" "/the-existential-risk-of-mathematical-error";
+"~^/HN$" "/hn";
+"~^/Ads$" "/ads";
+"~^/Red$" "/red";
+"~^/Zeo$" "/zeo/zeo";
+"~^/CYOA$" "/cyoa";
+"~^/GANs$" "/gans";
+"~^/Hafu$" "/hafu";
+"~^/LLLT$" "/lllt";
+"~^/Milk$" "/milk";
+"~^/Sand$" "/sand";
+"~^/SMPY$" "/smpy";
+"~^/Sort$" "/sort";
+"~^/WiFi$" "/wifi";
+"~^/About$" "/about";
+"~^/Amuse$" "/amuse";
+"~^/Clone$" "/clone";
+"~^/Crops$" "/crops";
+"~^/Faces$" "/faces";
+"~^/Fonts$" "/fonts";
+"~^/GPT-2$" "/gpt-2";
+"~^/GPT-3$" "/gpt-3";
+"~^/Lorem$" "/lorem";
+"~^/Melon$" "/melon";
+"~^/Modus$" "/modus";
+"~^/Notes$" "/notes/notes";
+"~^/Socks$" "/socks";
+"~^/Tanks$" "/tanks";
+"~^/Tryon$" "/tryon";
+"~^/TWDNE$" "/twdne";
+"~^/Water$" "/water";
+"~^/Bacopa$" "/bacopa";
+"~^/Beauty$" "/beauty";
+"~^/BigGAN$" "/biggan";
+"~^/Catnip$" "/catnip";
+"~^/Design$" "/design";
+"~^/Earwax$" "/earwax";
+"~^/Hunter$" "/hunter";
+"~^/Iodine$" "/iodine";
+"~^/Newton$" "/newton";
+"~^/Search$" "/search";
+"~^/Timing$" "/timing";
+"~^/Touhou$" "/touhou";
+"~^/DNB-FAQ$" "/dnb-faq";
+"~^/LARPing$" "/larping";
+"~^/Lithium$" "/lithium";
+"~^/MCTS-AI$" "/mcts-ai";
+"~^/Poisson$" "/poisson";
+"~^/Soylent$" "/soylent";
+"~^/Tool-AI$" "/tool-ai";
+"~^/Traffic$" "/traffic";
+"~^/Weather$" "/weather";
+"~^/zeo/CO2$" "/zeo/co2";
+"~^/zeo/ZMA$" "/zeo/zma";
+"~^/Backstop$" "/backstop";
+"~^/Barratry$" "/barratry";
+"~^/CO2-Coin$" "/co2-coin";
+"~^/Creatine$" "/creatine";
+"~^/Cryonics$" "/cryonics";
+"~^/Epigrams$" "/epigrams";
+"~^/Fulltext$" "/fulltext";
+"~^/Language$" "/language";
+"~^/Media-RL$" "/media-rl";
+"~^/Mistakes$" "/mistakes";
+"~^/Nicotine$" "/nicotine";
+"~^/notes/FC$" "/notes/fc";
+"~^/Resorter$" "/resorter";
+"~^/Scanners$" "/scanners";
+"~^/Screwfly$" "/screwfly";
+"~^/Unseeing$" "/unseeing";
+"~^/Anchoring$" "/anchoring";
+"~^/Blackmail$" "/blackmail";
+"~^/Causality$" "/causality";
+"~^/Changelog$" "/changelog";
+"~^/Coin-flip$" "/coin-flip";
+"~^/Computers$" "/computers";
+"~^/Copyright$" "/copyright";
+"~^/GoodReads$" "/goodreads";
+"~^/Greenland$" "/greenland";
+"~^/Holy-wars$" "/holy-wars";
+"~^/Long-Bets$" "/long-bets";
+"~^/Longevity$" "/longevity";
+"~^/Melatonin$" "/melatonin";
+"~^/Modafinil$" "/modafinil";
+"~^/notes/TBI$" "/notes/tbi";
+"~^/On-Stress$" "/on-stress";
+"~^/Questions$" "/questions";
+"~^/Selection$" "/selection";
+"~^/Sidenotes$" "/sidenotes";
+"~^/Silk-Road$" "/silk-road";
+"~^/Sunk-cost$" "/sunk-cost";
+"~^/Treadmill$" "/treadmill";
+"~^/Variables$" "/variables";
+"~^/AB-testing$" "/ab-testing";
+"~^/Collecting$" "/collecting";
+"~^/Complement$" "/complement";
+"~^/Everything$" "/everything";
+"~^/FMP-parody$" "/fmp-parody";
+"~^/Littlewood$" "/littlewood";
+"~^/Lorem-code$" "/lorem-code";
+"~^/Lorem-list$" "/lorem-list";
+"~^/Mugging-DP$" "/mugging-dp";
+"~^/Nootropics$" "/nootropics/nootropics";
+"~^/Problem-14$" "/problem-14";
+"~^/Subscripts$" "/subscripts";
+"~^/Candy-Japan$" "/candy-japan";
+"~^/Colder-Wars$" "/colder-wars";
+"~^/Correlation$" "/correlation";
+"~^/Differences$" "/differences";
+"~^/DNM-arrests$" "/dnm-arrests";
+"~^/GPT-2-music$" "/gpt-2-music";
+"~^/Leprechauns$" "/leprechauns";
+"~^/Lifelogging$" "/lifelogging";
+"~^/Lorem-block$" "/lorem-block";
+"~^/Lorem-links$" "/lorem-links";
+"~^/Lorem-table$" "/lorem-table";
+"~^/Lunar-sleep$" "/lunar-sleep";
+"~^/notes/Fermi$" "/notes/fermi";
+"~^/notes/Lions$" "/notes/lions";
+"~^/Replication$" "/replication";
+"~^/reviews/MLP$" "/reviews/mlp";
+"~^/reviews/Tea$" "/reviews/tea";
+"~^/TPB-Bitcoin$" "/tpb-bitcoin";
+"~^/Danbooru2021$" "/danbooru2021";
+"~^/DNM-archives$" "/dnm-archives";
+"~^/DNM-survival$" "/dnm-survival";
+"~^/EA-donations$" "/ea-donations";
+"~^/Improvements$" "/improvements";
+"~^/Isomorphisms$" "/isomorphisms";
+"~^/Lorem-header$" "/lorem-header";
+"~^/Lorem-inline$" "/lorem-inline";
+"~^/MLP-genetics$" "/mlp-genetics";
+"~^/Mouse-Utopia$" "/mouse-utopia";
+"~^/notes/Faster$" "/notes/faster";
+"~^/notes/Ramsey$" "/notes/ramsey";
+"~^/reviews/ARPA$" "/reviews/arpa";
+"~^/reviews/Mead$" "/reviews/mead";
+"~^/RNN-metadata$" "/rnn-metadata";
+"~^/Timestamping$" "/timestamping";
+"~^/zeo/Caffeine$" "/zeo/caffeine";
+"~^/zeo/Redshift$" "/zeo/redshift";
+"~^/Catnip-survey$" "/catnip-survey";
+"~^/Dune-genetics$" "/dune-genetics";
+"~^/fiction/Poems$" "/fiction/poems";
+"~^/Forking-Paths$" "/forking-paths";
+"~^/Google-Alerts$" "/google-alerts";
+"~^/Hydrocephalus$" "/hydrocephalus";
+"~^/Immoral-Books$" "/immoral-books";
+"~^/Life-contract$" "/life-contract";
+"~^/Lorem-Unicode$" "/lorem-unicode";
+"~^/Mail-delivery$" "/mail-delivery";
+"~^/notes/Fashion$" "/notes/fashion";
+"~^/notes/Scaling$" "/notes/scaling";
+"~^/On-Disrespect$" "/on-disrespect";
+"~^/reviews/Anime$" "/reviews/anime";
+"~^/reviews/Books$" "/reviews/books";
+"~^/Startup-ideas$" "/startup-ideas";
+"~^/zeo/Potassium$" "/zeo/potassium";
+"~^/zeo/Vitamin-D$" "/zeo/vitamin-d";
+"~^/Archiving-URLs$" "/archiving-urls";
+"~^/Embryo-editing$" "/embryo-editing";
+"~^/fiction/Batman$" "/fiction/batman";
+"~^/fiction/Clippy$" "/fiction/clippy";
+"~^/fiction/Menard$" "/fiction/menard";
+"~^/Justifications$" "/justifications";
+"~^/Lorem-dropcaps$" "/lorem-dropcaps";
+"~^/Lorem-sidenote$" "/lorem-sidenote";
+"~^/notes/Pipeline$" "/notes/pipeline";
+"~^/reviews/Bakker$" "/reviews/bakker";
+"~^/reviews/Movies$" "/reviews/movies";
+"~^/reviews/Operas$" "/reviews/operas";
+"~^/Suzanne-Delage$" "/suzanne-delage";
+"~^/The-3-Grenades$" "/the-3-grenades";
+"~^/Wooden-pillows$" "/wooden-pillows";
+"~^/Drug-heuristics$" "/drug-heuristics";
+"~^/Faces-graveyard$" "/faces-graveyard";
+"~^/fiction/Jaguars$" "/fiction/jaguars";
+"~^/LSD-microdosing$" "/lsd-microdosing";
+"~^/Morning-writing$" "/morning-writing";
+"~^/notes/Attention$" "/notes/attention";
+"~^/reviews/Umineko$" "/reviews/umineko";
+"~^/Turing-complete$" "/turing-complete";
+"~^/Complexity-vs-AI$" "/complexity-vs-ai";
+"~^/Design-graveyard$" "/design-graveyard";
+"~^/Embryo-selection$" "/embryo-selection";
+"~^/fiction/Fragment$" "/fiction/fragment";
+"~^/Google-shutdowns$" "/google-shutdowns";
+"~^/GPT-3-nonfiction$" "/gpt-3-nonfiction";
+"~^/Lewis-meditation$" "/lewis-meditation";
+"~^/Lorem-admonition$" "/lorem-admonition";
+"~^/Lorem-multimedia$" "/lorem-multimedia";
+"~^/Lorem-transclude$" "/lorem-transclude";
+"~^/Modafinil-survey$" "/modafinil-survey";
+"~^/notes/Competence$" "/notes/competence";
+"~^/notes/Parasocial$" "/notes/parasocial";
+"~^/notes/Regression$" "/notes/regression";
+"~^/Order-statistics$" "/order-statistics";
+"~^/reviews/Bakewell$" "/reviews/bakewell";
+"~^/reviews/McNamara$" "/reviews/mcnamara";
+"~^/sicp/Chapter-1-1$" "/sicp/chapter-1-1";
+"~^/sicp/Chapter-1-2$" "/sicp/chapter-1-2";
+"~^/sicp/Chapter-1-3$" "/sicp/chapter-1-3";
+"~^/Wikipedia-resume$" "/wikipedia-resume";
+"~^/Choosing-Software$" "/choosing-software";
+"~^/Console-Insurance$" "/console-insurance";
+"~^/Death-Note-Ending$" "/death-note-ending";
+"~^/Death-Note-script$" "/death-note-script";
+"~^/DNB-meta-analysis$" "/dnb-meta-analysis";
+"~^/Fake-Journal-Club$" "/fake-journal-club";
+"~^/fiction/Genshiken$" "/fiction/genshiken";
+"~^/Littlewood-origin$" "/littlewood-origin";
+"~^/Music-distraction$" "/music-distraction";
+"~^/reviews/Cat-Sense$" "/reviews/cat-sense";
+"~^/sicp/Introduction$" "/sicp/introduction";
+"~^/Spaced-repetition$" "/spaced-repetition";
+"~^/Statistical-notes$" "/statistical-notes";
+"~^/fiction/Brave-poem$" "/fiction/brave-poem";
+"~^/fiction/Cloud-Nine$" "/fiction/cloud-nine";
+"~^/fiction/Happenings$" "/fiction/happenings";
+"~^/notes/Local-optima$" "/notes/local-optima";
+"~^/notes/Small-groups$" "/notes/small-groups";
+"~^/Prediction-markets$" "/prediction-markets";
+"~^/Research-criticism$" "/research-criticism";
+"~^/Scaling-hypothesis$" "/scaling-hypothesis";
+"~^/Slowing-Moores-Law$" "/slowing-moores-law";
+"~^/Story-Of-Your-Life$" "/story-of-your-life";
+"~^/Wikipedia-and-Knol$" "/wikipedia-and-knol";
+"~^/fiction/Before-Dawn$" "/fiction/before-dawn";
+"~^/fiction/Final-Gifts$" "/fiction/final-gifts";
+"~^/fiction/Men-of-Iron$" "/fiction/men-of-iron";
+"~^/fiction/Safecracker$" "/fiction/safecracker";
+"~^/notes/Daicon-videos$" "/notes/daicon-videos";
+"~^/An-Abortion-Dialogue$" "/an-abortion-dialogue";
+"~^/Death-Note-Anonymity$" "/death-note-anonymity";
+"~^/fiction/The-Erl-King$" "/fiction/the-erl-king";
+"~^/nootropics/Magnesium$" "/nootropics/magnesium";
+"~^/The-Narrowing-Circle$" "/the-narrowing-circle";
+"~^/Against-The-Miletians$" "/against-the-miletians";
+"~^/Evolutionary-Licenses$" "/evolutionary-licenses";
+"~^/fiction/A-Human-Story$" "/fiction/a-human-story";
+"~^/fiction/Dying-Outside$" "/fiction/dying-outside";
+"~^/notes/Killing-Rabbits$" "/notes/killing-rabbits";
+"~^/Ontological-pantheism$" "/ontological-pantheism";
+"~^/Self-decrypting-files$" "/self-decrypting-files";
+"~^/Simulation-inferences$" "/simulation-inferences";
+"~^/Wikipedia-and-YouTube$" "/wikipedia-and-youtube";
+"~^/Ethical-sperm-donation$" "/ethical-sperm-donation";
+"~^/fiction/Hybrid-Rainbow$" "/fiction/hybrid-rainbow";
+"~^/fiction/Missing-Cities$" "/fiction/missing-cities";
+"~^/haskell/Summer-of-Code$" "/haskell/summer-of-code";
+"~^/The-Melancholy-of-Kyon$" "/the-melancholy-of-kyon";
+"~^/fiction/Dinosaur-Comics$" "/fiction/dinosaur-comics";
+"~^/fiction/Insert-or-Abort$" "/fiction/insert-or-abort";
+"~^/Hyperbolic-Time-Chamber$" "/hyperbolic-time-chamber";
+"~^/fiction/The-Last-Muezzin$" "/fiction/the-last-muezzin";
+"~^/haskell/Archiving-GitHub$" "/haskell/archiving-github";
+"~^/notes/Lizardman-constant$" "/notes/lizardman-constant";
+"~^/fiction/The-Buddhas-Wheel$" "/fiction/the-buddhas-wheel";
+"~^/fiction/The-Mulberry-Tree$" "/fiction/the-mulberry-tree";
+"~^/GPT-2-preference-learning$" "/gpt-2-preference-learning";
+"~^/notes/Variance-components$" "/notes/variance-components";
+"~^/Wikipedia-and-Other-Wikis$" "/wikipedia-and-other-wikis";
+"~^/Bitcoin-is-Worse-is-Better$" "/bitcoin-is-worse-is-better";
+"~^/In-Defense-Of-Inclusionism$" "/in-defense-of-inclusionism";
+"~^/Resilient-Haskell-Software$" "/resilient-haskell-software";
+"~^/Terrorism-is-not-Effective$" "/terrorism-is-not-effective";
+"~^/haskell/Run-Length-Encoding$" "/haskell/run-length-encoding";
+"~^/reviews/Cultural-Revolution$" "/reviews/cultural-revolution";
+"~^/Charity-is-not-about-helping$" "/charity-is-not-about-helping";
+"~^/fiction/Gryyfins-Of-The-Word$" "/fiction/gryyfins-of-the-word";
+"~^/Arias-past-present-and-future$" "/arias-past-present-and-future";
+"~^/fiction/The-Palace-of-Wonders$" "/fiction/the-palace-of-wonders";
+"~^/fiction/The-Snowbanks-of-Time$" "/fiction/the-snowbanks-of-time";
+"~^/haskell/Wikipedia-Archive-Bot$" "/haskell/wikipedia-archive-bot";
+"~^/Terrorism-is-not-about-Terror$" "/terrorism-is-not-about-terror";
+"~^/Culture-is-not-about-Esthetics$" "/culture-is-not-about-esthetics";
+"~^/Girl-Scouts-and-good-governance$" "/girl-scouts-and-good-governance";
+"~^/Wikipedia-and-Dark-Side-Editing$" "/wikipedia-and-dark-side-editing";
+"~^/fiction/How-the-Panther-got-Black$" "/fiction/how-the-panther-got-black";
+"~^/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/wikipedia-rss-archive-bot";
+"~^/Anime-criticism-is-not-about-quality$" "/anime-criticism-is-not-about-quality";
+"~^/The-Melancholy-of-Subculture-Society$" "/the-melancholy-of-subculture-society";
+"~^/Conscientiousness-and-online-education$" "/conscientiousness-and-online-education";
+"~^/fiction/The-Ones-Who-Walk-Towards-Acre$" "/fiction/the-ones-who-walk-towards-acre";
