renaming: lowercase and shorten gwern.net essays

--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -69,7 +69,7 @@
 "~^/ab$" "/AB-testing";
 "~^/AB-testing%23deep-reinforcement-learning$" "/AB-testing#deep-reinforcement-learning";
 "~^/ab-testing.page$" "/AB-testing.page";
-"~^/ad$" "/Ads";
+"~^/ads$" "/ad";
 "~^/Against$" "/Against-the-Miletians";
 "~^/Against%20The%20Miletians$" "/Against-The-Miletians";
 "~^/alcohol$" "/Alcohol";
@@ -171,6 +171,9 @@
 "~^/Danbooru2017,$" "/Danbooru2021#danbooru2017";
 "~^/dambooru2018$" "/Danbooru2021#danbooru2018";
 "~^/%7B/url%7Bhttps:/www.gwern.net/Danbooru2019%7D%7D$" "/Danbooru2021#danbooru2019";
+"~^/[Dd]anbooru2019.*$" "/Danbooru2021#danbooru2019";
+"~^/[Dd]anbooru2018.*$" "/Danbooru2021#danbooru2018";
+"~^/[Dd]anbooru2017.*$" "/Danbooru2021#danbooru2017";
 "~^/Dabbooru2020.*" "/Danbooru2021#danbooru2020";
 "~^/docs/psychology/Danbooru2019.*$" "/Danbooru2021#danbooru2021";
 "~^/Danbooru2018#download$" "/Danbooru2021#download";
@@ -422,7 +425,8 @@
 "~^/1967-wagatsuma.pdf$" "/docs/anime/1967-wagatsuma.pdf";
 "~^/docs/anie/1978-hasaka.pdf.*$" "/docs/anime/1978-nosaka.pdf";
 "~^/1993-anno-charscounterattackfanclubbook-khodazattranslation.pdf$" "/docs/anime/1993-anno-charscounterattackfanclubbook-khodazattranslation.pdf";
-"~^/1995-newitz.pdf$" "/docs/anime/1995-newitz.pdf";
+"~^/1995-newitz.pdf.*$" "/docs/anime/1995-newitz.pdf";
+"~^/docs/1995-newitz.pdf.*$" "/docs/anime/1995-newitz.pdf";
 "~^/docs/anime/1996-animerica-horn-honneamisereview$" "/docs/anime/1996-animerica-horn-honneamisereview.txt";
 "~^/1996-kelsky.pdf$" "/docs/anime/1996-kelsky.pdf";
 "~^/1997-utena$" "/docs/anime/1997-utena";
@@ -586,6 +590,7 @@
 "~^/docs/2011-davis\.page$" "/docs/bitcoin/2011-davis.page";
 "~^/docs/2013-moorechristin-bitcoinexchanges\.csv$" "/docs/bitcoin/2013-moorechristin-bitcoinexchanges.csv";
 "~^/2014-mccaleb$" "/docs/bitcoin/2014-mccaleb";
+"~^/docs/2014.*mccaleb$" "/docs/bitcoin/2014-mccaleb";
 "~^/docs/2014-mccaleb\.page$" "/docs/bitcoin/2014-mccaleb.page";
 "~^/2014-smithset.pdf$" "/docs/bitcoin/2014-smithset.pdf";
 "~^/2016-kopp.pdf$" "/docs/bitcoin/2016-kopp.pdf";
@@ -2280,6 +2285,7 @@
 "~^/2018-papageorge.pdf$" "/docs/genetics/heritable/2018-papageorge.pdf";
 "~^/2018-pemberton.pdf$" "/docs/genetics/heritable/2018-pemberton.pdf";
 "~^/2018-polderman.pdf$" "/docs/genetics/heritable/2018-polderman.pdf";
+"~^/docs/genetics/2018-polderman.pdf.*$" "/docs/genetics/heritable/2018-polderman.pdf";
 "~^/2018-prasad.pdf$" "/docs/genetics/heritable/2018-prasad.pdf";
 "~^/2018-pulit.pdf$" "/docs/genetics/heritable/2018-pulit.pdf";
 "~^/2018-rimfeld.pdf$" "/docs/genetics/heritable/2018-rimfeld.pdf";
@@ -2460,6 +2466,7 @@
 "~^/1991-helbig.pdf$" "/docs/genetics/selection/1991-helbig.pdf";
 "~^/1992-innis.pdf$" "/docs/genetics/selection/1992-innis.pdf";
 "~^/1992-pearson-shockleyoneugenicsandrace.pdf$" "/docs/genetics/selection/1992-pearson-shockleyoneugenicsandrace.pdf";
+"~^/docs/genetics/selection/1992-pearson-shockleyoneugenicsandrace.djvu.*$" "/docs/genetics/selection/1992-pearson-shockleyoneugenicsandrace.pdf";
 "~^/1992-wilmut.pdf$" "/docs/genetics/selection/1992-wilmut.pdf";
 "~^/1993-smith-thetheoryofevolution.pdf$" "/docs/genetics/selection/1993-smith-thetheoryofevolution.pdf";
 "~^/1994-charlesworth-evolutioninagestructuredpopulations.pdf$" "/docs/genetics/selection/1994-charlesworth-evolutioninagestructuredpopulations.pdf";
@@ -2685,7 +2692,8 @@
 "~^/1979-vogel-japanasnumberone.pdf$" "/docs/history/1979-vogel-japanasnumberone.pdf";
 "~^/1980-engels.pdf$" "/docs/history/1980-engels.pdf";
 "~^/1980-metzger.pdf$" "/docs/history/1980-metzger.pdf";
-"~^/1981-golden.pdf$" "/docs/history/1981-golden.pdf";
+"~^/1981-golden.pdf.*$" "/docs/history/1981-golden.pdf";
+"~^/docs/1981-golden.pdf.*$" "/docs/history/1981-golden.pdf";
 "~^/1986-dietz.pdf$" "/docs/history/1986-dietz.pdf";
 "~^/1988-veyne.pdf$" "/docs/history/1988-veyne.pdf";
 "~^/1989-stern.pdf$" "/docs/history/1989-stern.pdf";
@@ -5318,6 +5326,7 @@
 "~^/1973-wheeler-beyondthepunitivesociety.pdf$" "/docs/sociology/1973-wheeler-beyondthepunitivesociety.pdf";
 "~^/1974-levison-theworkingclassmajority.pdf$" "/docs/sociology/1974-levison-theworkingclassmajority.pdf";
 "~^/1974-martinson.pdf$" "/docs/sociology/1974-martinson.pdf";
+"~^/docs/1974-martinson.pdf$" "/docs/sociology/1974-martinson.pdf";
 "~^/1975-gramlich-educationalperformancecontracting.pdf$" "/docs/sociology/1975-gramlich-educationalperformancecontracting.pdf";
 "~^/1975-lemasters-bluecollararistocrats.pdf$" "/docs/sociology/1975-lemasters-bluecollararistocrats.pdf";
 "~^/1976-kaufman-aregovernmentorganizationsimmortal.pdf$" "/docs/sociology/1976-kaufman-aregovernmentorganizationsimmortal.pdf";
@@ -5758,6 +5767,7 @@
 "~^/1931-fisher.pdf$" "/docs/statistics/decision/1931-fisher.pdf";
 "~^/1931-student.pdf$" "/docs/statistics/decision/1931-student.pdf";
 "~^/1933-elderton.pdf$" "/docs/statistics/decision/1933-elderton.pdf";
+"~^/docs/statistics/1933-elderton.pdf.*$" "/docs/statistics/decision/1933-elderton.pdf";
 "~^/1933-thompson.pdf$" "/docs/statistics/decision/1933-thompson.pdf";
 "~^/1935-thompson.pdf$" "/docs/statistics/decision/1935-thompson.pdf";
 "~^/1937-fisher-thedesignofexperiments.pdf$" "/docs/statistics/decision/1937-fisher-thedesignofexperiments.pdf";
@@ -5780,7 +5790,8 @@
 "~^/1959-schlaifer-probabilitystatisticsbusinessdecisions.pdf$" "/docs/statistics/decision/1959-schlaifer-probabilitystatisticsbusinessdecisions.pdf";
 "~^/1960-howard-dynamicprogrammingmarkovprocesses.pdf$" "/docs/statistics/decision/1960-howard-dynamicprogrammingmarkovprocesses.pdf";
 "~^/1960-jewell.pdf$" "/docs/statistics/decision/1960-jewell.pdf";
-"~^/1960-kelley.pdf$" "/docs/statistics/decision/1960-kelley.pdf";
+"~^/1960-kelley.pdf.*$" "/docs/statistics/decision/1960-kelley.pdf";
+"~^/docs/1960-kelley.pdf.*$" "/docs/statistics/decision/1960-kelley.pdf";
 "~^/\.\.\./1961-raiffa-appliedstatisticaldecisiontheor%.*$" "/docs/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
 "~^/1962-blackett-studiesofwarnuclearandconventional.pdf$" "/docs/statistics/decision/1962-blackett-studiesofwarnuclearandconventional.pdf";
 "~^/1962-dreyfus.pdf$" "/docs/statistics/decision/1962-dreyfus.pdf";
@@ -6937,7 +6948,7 @@
 "~^/docs/fiction/The-Snowbanks-of-Time$" "/fiction/The-Snowbanks-of-Time";
 "~^/docs/[a-km-z].*/FMP-parody.*$" "/FMP-parody";
 "~^/fo\?fbclid.*$" "/fog-gun";
-"~^/font$" "/Fonts";
+"~^/fonts$" "/font";
 "~^/docs/eva/2002-notenki-memoirs for an annotated HTML edition, which also includes clips from _Blue Blazes_$" "/docs/eva/2002-takeda-notenkimemoirs";
 "~^/ftp://cag.lcs.mit.edu/pub/dm/papers/mazieres:pnym.ps.gz.*$" "ftp://cag.lcs.mit.edu/pub/dm/papers/mazieres:pnym.ps.gz";
 "~^/ftp://ftp.cs.bgu.ac.il/pub/people/dolev/31.ps.*$" "ftp://ftp.cs.bgu.ac.il/pub/people/dolev/31.ps";
@@ -7393,6 +7404,11 @@
 "~^/rs$"  "https://gwern.substack.com/feed";
 "~^/feed$"  "https://gwern.substack.com/feed";
 "~^/articles.rss$" "https://gwern.substack.com/feed";
+"~^/rss$" "https://gwern.substack.com/feed";
+"~^/atom$" "https://gwern.substack.com/feed";
+"~^/feed.rss$" "https://gwern.substack.com/feed";
+"~^/feed/$" "https://gwern.substack.com/feed";
+"~^/feed/index$" "https://gwern.substack.com/feed";
 "~^/on-Hackage$" "https://hackage.haskell.org/";
 "~^/package/Barracuda.*$" "https://hackage.haskell.org/package/Barracuda";
 "~^/jgm/gitit/blame/master/src/Network/Gitit/Feed.hs.*$" "https://hackage.haskell.org/package/gitit-0.8/docs/src/Network-Gitit-Feed.html";
@@ -8517,7 +8533,7 @@
 "~^/Longevity/converting-risk-reduction-to-average-life-expectancy-gain$" "/Longevity#converting-risk-reduction-to-average-life-expectancy-gain";
 "~^/Meformin$" "/Longevity#metformin";
 "~^/Longevityvitamin-d$" "/Longevity#vitamin-d";
-"~^/Examples$" "/Lorem";
+"~^/Examples$" "/lorem";
 "~^/'___'%20microdosing$" "/LSD-microdosing";
 "~^/LSD-microdosing,page$" "/LSD-microdosing.page";
 "~^/docs/[a-km-z].*/Lunar-sleep.*$" "/Lunar-sleep";
@@ -8566,6 +8582,7 @@
 "~^/static/metadata/auto.hs$" "~^/metadata/auto.yaml";
 "~^/backlinks.hs.*$" "/metadata/backlinks.hs";
 "~^/custom.yaml$" "/metadata/full.yaml";
+"~^/links.page.*$" "/me.page";
 "~^/docs/[a-km-z]/Milk.*$" "/Milk";
 "~^/docs/fiction/Missing-Cities$" "/Missing-Cities";
 "~^/\.\/MLP$" "/MLP";
@@ -8580,7 +8597,8 @@
 "~^/Modafinilwhere-to-buy-modafinil$" "/Modafinil#where-to-buy-modafinil";
 "~^/docs/genetics/selection/www.mountimprobable.com/Modus$" "/Modus";
 "~^/docs/genetics/selection/www.mountimprobable.com/Morning-writing$" "/Morning-writing";
-"~^/M[aeiouy][ut][hjkl][tai][aeoi][mnopqrs]n$" "/Mouse-Utopia";
+"~^/M[aeiouy][ut][hjkl][tai][aeoi][mnopqrs]n$" "/mouse-utopia";
+"~^/[Mm]ouse$" "/mouse-utopia";
 "~^/Anime-reviews/Movie-reviews$" "/Movie-reviews";
 "~^/film-$" "/Movie-reviews#movies";
 "~^/opera$" "/Movie-reviews#opera";
@@ -9506,6 +9524,16 @@
 "~^/zeo/vitamin-d@vitamin-d-at-morn-helps.*$" "/zeo/Vitamin-D#vitamin-d-at-morn-helps";
 "~^/docs/[a-km-z].*/ZMA.*$" "/zeo/ZMA";
 "~^/docs/rotten.com/library/bio/entertainers/actors/brad-pitt/zeo/ZMA$" "/ZMA";
+"~^/[Bb]lack-market-archiv.*$" "/dnm-archive";
+"~^/docs/2016-lipsitch.pdf.*$" "/docs/existential-risk/2016-lipsitch.pdf";
+"~^/nootropics/weather.*$" "/weather";
+"~^/[Dd]anbooru$" "/danbooru2021";
+"~^/static/img/favicon.png.*$" "/static/img/logo/logo-favicon.png";
+"~^/[A-Za-z-]+/static/img/favicon.png.*$" "/static/img/logo/logo-favicon.png";
+"~^/Girl-Scouts-and-good-governance.html.*$" "/girl-scouts";
+"~^/docs/music/music-distraction/2001-randsell.pdf.*$" "/docs/music/music-distraction/2001-ransdell.pdf";
+"~^/GPT-2-mudic.*$" "/gpt-2-music";
+"~^/docs/japan/2004-garofa$" "/docs/japan/poetry/2004-garofalo-thehaikuandpoemsofikkyu.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14420,6 +14448,7 @@
 "~^/.*\)\.reduce\(function\(.*$" "/static/404";
 "~^/tomcat/.*$" "/static/404";
 "~^/.*/srcset$" "/static/404";
+"~^/.*htpassw.*d.*$" "/static/404"; # htpasswd
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
